--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
-    "firebase": "^10.9.0",
-    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
@@ -27,8 +25,6 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "randomstring": "^1.3.0",
-    "sharp": "^0.33.3",
-    "uuid": "^9.0.1",
-    "uuidv4": "^6.2.13"
+    "sharp": "^0.33.3"
   }
 }
